--- a/css/stylePersonalised.css
+++ b/css/stylePersonalised.css
@@ -7,8 +7,8 @@ body {
   line-height: 1.5;
   letter-spacing: 0.05em;
   font-size: 16px;
-  background-color: #303841;
-  color: #d8dee9;
+  background-color: #fafaf9;
+  color: #131313;
 }
 h1,
 h2,
@@ -18,30 +18,30 @@ ol,
 ul,
 li,
 a {
-  font-family: sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 h1,
 h2,
 h3 {
-  font-family: sans-serif;
-  color: #ededed;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #1d2334;
 }
 h2 {
   font-size: 1.3em;
-  color: #303841;
+  color: rgb(50, 62, 76);
 }
 a {
   font-weight: bold;
-  color: #ededed;
+  color: #1d2334;
   transition: all 500ms cubic-bezier(0.25, 0.1, 0.25, 1);
 }
 a:hover {
-  color: #848b95;
+  color: #40526a;
 }
 code,
 pre {
   background-color: #22262a;
-  color: #ededed;
+  color: #1d2334;
   border-radius: 4px;
   padding: 0 0.25em;
   white-space: pre-wrap; /* Since CSS 2.1 */
@@ -55,27 +55,26 @@ img {
   height: auto;
 }
 section.main {
-  max-width: 700px;
+  max-width: 70vw;
+  width: 50vw;
   margin: 0 auto;
   margin-top: 5rem;
   margin-bottom: 5rem;
   transition: all 500ms cubic-bezier(0.25, 0.1, 0.25, 1);
 }
-p.copyright {
-  margin: 0 auto;
-  margin-bottom: 0.5em;
-  text-align: center;
-  color: #333333;
-}
 
 /* New CSS */
 
 .container {
-  background-color: #c7d1dd;
+  background-color: #e0e9f5;
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
   color: #22262a;
+  border-radius: 10px;
+  padding: 20px;
+  margin-bottom: 40px;
+  box-shadow: 7px 07px 30px -27px rgba(0.2,0,0,0.60); ;
 }
 
 .container_checkbox{
@@ -83,21 +82,21 @@ p.copyright {
 	align-items: center;
 }
 
-.titleText_font-18 {
-  font-size: 18px;
+.text-title {
+  font-size: 20px;
   font-weight: 600;
   margin-top: 0;
 }
 
-.bodyText_font-14 {
-  font-size: 14px;
+.text-body {
+  font-size: 16px;
   font-weight: 300;
 }
 
 .label {
   font-size: 14px;
-  font-weight: 500;
-  font-family: sans-serif;
+  font-weight:400;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .input {
   width: 98%;
@@ -118,8 +117,8 @@ p.copyright {
 
 .label_checkbox {
   font-size: 12px;
-  font-weight: 300;
-  font-family: sans-serif;
+  font-weight: 400;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .btn-primary {
@@ -167,6 +166,11 @@ p.copyright {
 	color:rgb(29, 29, 51);
 }
 
+.notification-primary p {
+  display: flex;
+  align-items: center;
+}
+
 
 .btn-container{
 	display: flex;
@@ -185,11 +189,16 @@ p.copyright {
 	margin-right: auto;
 }
 
-.icon{
+.icon-login{
   color: white;
-  font-weight: 600;
   width: 14px;
   height: 14px;
+}
+
+.icon-notification{
+  color: rgb(21, 21, 169);
+  width: 18px;
+  height: 18px;
 }
 
 /* Breakpoint */
