--- a/css/midTermProject.css
+++ b/css/midTermProject.css
@@ -87,12 +87,12 @@ background-repeat: no-repeat;
   transform: translateY(10rem);
 }
 
-.section-image{
+.section-three-image{
   width: 100rem;
-    height: 26rem;
-    object-fit: fill;
-    object-position: center;
-    border-radius: 0.5rem;
+  height:25rem;
+  object-fit: fill;
+  object-position: center;
+  border-radius: 0.5rem;
 }
 
 .section-image-thumbnail{
@@ -103,6 +103,7 @@ background-repeat: no-repeat;
     border-radius: 0.5rem;
     cursor: pointer;
 }
+
 .section-image-thumbnail:hover{
   transition: transform 0.3s ease-in-out;
   transform: scale(1.02);
@@ -113,6 +114,19 @@ background-repeat: no-repeat;
   padding-top: 9rem;
 }
 
+.section-three-content{
+  display: flex;
+  align-items: center;
+}
+
+.card-container{
+  display: flex;
+  justify-content: space-around;
+}
+
+.section-five{
+  display: flex;
+}
 
 .nav{
   height: 3rem;
@@ -127,6 +141,7 @@ background-repeat: no-repeat;
 .nav-link:hover {
   transition: border 0.3s ease-in-out;
   border-bottom: 2px solid var(--display-one);
+  cursor: pointer;
 }
 
 .logo{
@@ -134,7 +149,7 @@ background-repeat: no-repeat;
   height: 1.25rem;
 }
 
-.lightBox {
+.light-box {
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed; 
   width: 100vw;
@@ -201,14 +216,31 @@ background-repeat: no-repeat;
 }
 
 .card{
-  height: 18rem;
-  width: 15rem;
+  width: 25%;
+}
+
+.card-button{
+  margin-top: auto;
 }
 
 .resume-link:hover{
 text-decoration: underline;
 transition: text-decoration 0.3s ease-in-out;
 cursor: pointer;
+}
+
+.nav-open{
+  display: none;
+  cursor: pointer;
+}
+.nav-close{
+  display: none;
+  cursor: pointer;
+}
+
+.nav-link-container-vertical{
+  display: none;
+  /* width: 100%; */
 }
 
 /* color classes */
@@ -587,6 +619,267 @@ box-shadow: -1px 9px 48px -22px rgba(0,0,0,0.48);
 
 .pl-4 {
   padding-left: 2rem;
+}
+
+/* media queries for content at or below iPad air size*/
+
+@media screen and (max-width:1200px){
+  .card{
+    width: 40%;
+    margin-top: 2rem !important;
+    margin-right: 0 !important;
+  }
+
+  .card-container{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .section-image-thumbnail{
+    width: 45%;
+      height: auto;
+      object-fit: fill;
+      object-position: center;
+      border-radius: 0.5rem;
+      cursor: pointer;
+  }
+
+}
+
+@media screen and (max-width:1024px){
+  .section-two div{
+    width: 60%;
+    border-radius: 0.5rem;
+    transform: translateY(8rem);
+  }
+}
+
+@media screen and (min-width: 820px) {
+  .nav-close{
+    display: none !important;
+  }
+
+  .nav-open{
+    display: none !important;
+  }
+
+  .nav-link-container-vertical{
+    display: none !important;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .card-container{
+    margin-top: 0.1rem !important;
+    padding-top:0.1rem !important;
+  }
+
+  .container{
+    padding: 2.5rem 4rem 2.5rem 4rem;
+  }
+  
+  .nav{
+    padding: 1rem 3rem 1rem 4rem;
+  }
+   .nav-link-container-horizontal{
+    display: none;
+   }
+
+   .nav-open{
+    display: block;
+  }
+
+  .nav-link{
+    text-align: left;
+  }
+
+  .display-font {
+    font-size: 6rem;
+    font-weight: 800;
+  }
+  
+  .h1-font {
+    font-size: 3rem;
+    font-weight: 600;
+  }
+  
+  /* H2 */
+  .h2-font {
+    font-size: 2rem;
+    font-weight: 500;
+  }
+  
+  /* H3 */
+  .h3-font {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  
+  /* Body */
+  .body-font {
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1.25;
+  }
+  
+  /* Bold */
+  .bold-body-font {
+    font-size: 0.75rem;
+    font-weight: 500;
+  }
+
+  .hero-img{
+    background-image: url(../images/dsHero.png);
+    background-size: 18rem;
+    background-position: 24rem 14rem;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
+    }
+    .hero-section{
+      height: 32rem;
+    }
+
+    .section-two div{
+      width: 70%;
+      border-radius: 0.5rem;
+      transform: translateY(6rem);
+    }
+
+    .section-three{
+      padding-top: 6rem;
+    }
+
+    .section-three-image{
+      width: 70rem;
+      height:15rem;
+      object-fit: fill;
+      object-position: center;
+      border-radius: 0.5rem;
+    }
+}
+
+@media screen and (max-width: 720px) {
+  .section-five{
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .section-five div{
+    padding: 0;
+    margin:0;
+    margin-bottom: 2rem;
+  }
+  .section-image-thumbnail{
+    width: 100%;
+    height: auto;
+    object-fit: fill;
+    object-position: center;
+    border-radius: 0.5rem;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 520px) {
+
+  .section-three-image{
+    width: auto;
+    height: 15rem;
+    object-fit: fill;
+    object-position: center;
+    border-radius: 0.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .section-three-content{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .card-container{
+    margin-top: 0.1rem !important;
+    padding-top:0.1rem !important;
+  }
+
+  .card{
+    width: 80%;
+    margin-top: 2rem !important;
+    margin-right: 0 !important;
+  }
+
+  .cc-note{
+    /* display: none; */
+    font-size: 7px;
+  }
+
+}
+
+@media screen and (max-width: 430px) {
+  .container{
+    padding: 1.5rem 3rem 1.5rem 3rem;
+  }
+  
+  .nav{
+    padding: 1rem 3dvi 1rem 3cqi;
+  }
+
+  .display-font {
+    font-size: 4rem;
+    font-weight: 800;
+  }
+
+  .display-font {
+    font-size: 4rem;
+    font-weight: 800;
+  }
+  
+  .h1-font {
+    font-size: 2.75rem;
+    font-weight: 600;
+  }
+  
+  /* H2 */
+  .h2-font {
+    font-size: 1.75rem;
+    font-weight: 500;
+  }
+  
+  /* H3 */
+  .h3-font {
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+  
+  /* Body */
+  .body-font {
+    font-size: 0.7rem;
+    font-weight: 400;
+    line-height: 1.25;
+  }
+  
+  /* Bold */
+  .bold-body-font {
+    font-size: 0.7rem;
+    font-weight: 500;
+  }
+
+  .hero-img{
+    background-image: url(../images/dsHero.png);
+    background-size: 15rem;
+    background-position: 14rem 18rem;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
+    }
+
+    .section-two div{
+      width: 75%;
+      border-radius: 0.5rem;
+      transform: translateY(4rem);
+    }
 }
 
 
